--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "typescript": "^2.9.1",
     "webpack": "^3.11.0",
     "webpack-cli": "^3.0.1",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": ">=3.1.11"
   },
   "jest": {
     "moduleFileExtensions": [
